Moves the event colors to a css style

--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -44,7 +44,7 @@
     font-size: 16px;
 }
 
-.resourceOccupation {
+.resourceAvailability {
     margin-left: 20px;
     margin-top: 5px;
     float:left;
