--- a/seantis/dir/facility/css/directory.css
+++ b/seantis/dir/facility/css/directory.css
@@ -65,3 +65,31 @@
     background-color: #e99623 !important;
     border-color: #e99623 !important;
 }
+
+.resourceItem {
+    padding: 10px;
+}
+
+.resourceTitle {
+    margin-left: 10px;
+    margin-top: 5px;
+    float:left;
+    font-size: 16px;
+}
+
+.resourceAvailability {
+    margin-left: 20px;
+    margin-top: 5px;
+    float:left;
+    font-size: 16px;
+}
+
+.resourceItem:hover {
+    background-color: #eee;
+}
+
+.resourceDescription {
+    float:left;
+    margin-top: 5px;
+    margin-left: 25px;
+}
