--- a/seantis/dir/facility/css/directory.css
+++ b/seantis/dir/facility/css/directory.css
@@ -51,19 +51,29 @@
     box-shadow: 0px 0px 3px 3px #6DADF2; 
 }
 
+td.groupSelection {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    opacity: 1.0;
+}
+
 .event-unavailable, .event-unavailable .fc-event-skin, .event-unavailable .fc-event-head {
     background-color: #a1291e !important;
-    border-color: #a1291e !important;
+    border: none;
+    opacity: 0.6;
 }
 
 .event-available, .event-available .fc-event-skin, .event-available .fc-event-head {
     background-color: #379a00 !important;
-    border-color: #379a00 !important;
+    border: none;
+    opacity: 0.6;
 }
 
 .event-partly-available, .event-partly-available .fc-event-skin, .event-partly-available .fc-event-head {
     background-color: #e99623 !important;
-    border-color: #e99623 !important;
+    border: none;
+    opacity: 0.6;
 }
 
 .resourceItem {
