--- a/seantis/dir/facility/css/directory.css
+++ b/seantis/dir/facility/css/directory.css
@@ -45,37 +45,6 @@
     margin-top: -18px;
 }
 
-.groupSelection {
-    -webkit-box-shadow: 0px 0px 3px 3px #6DADF2;
-    -moz-box-shadow: 0px 0px 3px 3px #6DADF2;
-    box-shadow: 0px 0px 3px 3px #6DADF2; 
-}
-
-td.groupSelection {
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    opacity: 1.0;
-}
-
-.event-unavailable, .event-unavailable .fc-event-skin, .event-unavailable .fc-event-head {
-    background-color: #a1291e !important;
-    border: none;
-    opacity: 0.6;
-}
-
-.event-available, .event-available .fc-event-skin, .event-available .fc-event-head {
-    background-color: #379a00 !important;
-    border: none;
-    opacity: 0.6;
-}
-
-.event-partly-available, .event-partly-available .fc-event-skin, .event-partly-available .fc-event-head {
-    background-color: #e99623 !important;
-    border: none;
-    opacity: 0.6;
-}
-
 .resourceItem {
     padding: 10px;
 }
@@ -102,4 +71,41 @@ td.groupSelection {
     float:left;
     margin-top: 5px;
     margin-left: 25px;
+}
+
+.groupSelection {
+    -webkit-box-shadow: 0px 0px 3px 3px #6DADF2;
+    -moz-box-shadow: 0px 0px 3px 3px #6DADF2;
+    box-shadow: 0px 0px 3px 3px #6DADF2; 
+}
+
+#seantis-overview-calendar td.groupSelection {
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    opacity: 1.0;
+}
+
+#seantis-overview-calendar .event-unavailable, 
+#seantis-overview-calendar .event-unavailable .fc-event-skin, 
+#seantis-overview-calendar .event-unavailable .fc-event-head {
+    background-color: #a1291e !important;
+    border: none;
+    opacity: 0.6;
+}
+
+#seantis-overview-calendar .event-available, 
+#seantis-overview-calendar .event-available .fc-event-skin, 
+#seantis-overview-calendar .event-available .fc-event-head {
+    background-color: #379a00 !important;
+    border: none;
+    opacity: 0.6;
+}
+
+#seantis-overview-calendar .event-partly-available, 
+#seantis-overview-calendar .event-partly-available .fc-event-skin, 
+#seantis-overview-calendar .event-partly-available .fc-event-head {
+    background-color: #e99623 !important;
+    border: none;
+    opacity: 0.6;
 }
