--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -19,6 +19,11 @@
     padding-top: 20px;
 }
 
+.directoryChildrenCompare {
+    padding-top: 5px;
+    padding-bottom: 40px;
+}
+
 #directorySearchForm {
     display: none;
 }
