Adds link to monthly report of the resources

--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -19,9 +19,21 @@
     padding-top: 20px;
 }
 
-.directoryChildrenCompare {
+.directoryChildren h2 {
+   margin-top: 20px;    
+}
+
+.directoryChildren h2:first-child {
+    margin-top: 0;
+}
+
+.directoryChildrenUtils {
     padding-top: 5px;
     padding-bottom: 40px;
+}
+
+.directoryChildrenUtils ul li a {
+    font-size: 16px;
 }
 
 #directorySearchForm {
