--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -6,13 +6,27 @@
     margin: 0;
     margin-right: 25px;
     float: left;
-    margin-top: 10px;
+
+}
+
+.directoryResult {
+    border: solid #ddd 1px;
+    padding: 20px;
+    color: #3e5786;
+    margin-top: 5px;
+    margin-bottom: 0;
+    border-radius: 2px;
 }
 
 .directoryDescription {
     float: left;
     width: 50%;    
     margin-top: 10px;
+    color: #3e5786;
+}
+
+.opening-hours {
+    color: #333;   
 }
 
 .directoryChildren {
@@ -29,7 +43,7 @@
 
 .directoryChildrenUtils {
     padding-top: 5px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
 }
 
 .directoryChildrenUtils ul li a {
@@ -48,7 +62,9 @@
 }
 
 .resourceItem {
-    padding: 10px;
+    padding-top: 5px;
+    padding-left: 20px;   
+    padding-bottom: 5px;
 }
 
 .resourceTitle {
