--- a/seantis/dir/facility/css/directory.css
+++ b/seantis/dir/facility/css/directory.css
@@ -93,6 +93,15 @@
     color: #333;   
 }
 
+.directoryChildrenUtils {
+    padding-top: 5px;
+    padding-bottom: 20px;
+}
+
+.directoryChildrenUtils ul li a {
+    font-size: 16px;
+}
+
 .groupSelection {
     -webkit-box-shadow: 0px 0px 3px 3px #6DADF2;
     -moz-box-shadow: 0px 0px 3px 3px #6DADF2;
