--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -42,9 +42,10 @@
 }
 
 .resourceItem {
-    padding-top: 5px;
-    padding-left: 20px;   
-    padding-bottom: 5px;
+    margin: 10px 0;
+    padding: 10px 0 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
 }
 
 .resourceTitle {
