Moves inline styles to css files

--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -110,3 +110,15 @@
 .directoryChildren {
     margin-top: 20px;
 }
+
+.facilityInfo {
+    float: left; 
+    width: 62%;
+}
+
+.facilityOverview {
+    float: right; 
+    width: 35%; 
+    margin-left: 3%; 
+    margin-top:10px;
+}
