--- a/seantis/dir/facility/css/item.css
+++ b/seantis/dir/facility/css/item.css
@@ -5,23 +5,24 @@
 
     margin: 0;
     margin-right: 25px;
+    margin-top: 20px;
     float: left;
 
 }
 
 .directoryResult {
     border: solid #ddd 1px;
-    padding: 20px;
+    padding: 0 20px 10px 20px;
     color: #3e5786;
     margin-top: 5px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     border-radius: 2px;
 }
 
 .directoryDescription {
     float: left;
     width: 50%;    
-    margin-top: 10px;
+    margin-top: 20px;
     color: #3e5786;
 }
 
@@ -77,7 +78,7 @@
 }
 
 .directoryInfo {
-    padding-top: 10px;
+    padding-top: 0;
     color: #333;
 }
 
