--- a/seantis/dir/facility/css/directory.css
+++ b/seantis/dir/facility/css/directory.css
@@ -37,10 +37,8 @@
 }
 
 #directorySearchForm {
-    padding: 0 20px;
-    border: solid #ccc 1px;
-    background-color: #eee;
-    border-radius: 2px;
+    padding: 7px 20px;
+    min-height: 6em;
 }
 
 .directorySearchFormSelection {
