--- a/seantis/dir/facility/css/directory.css
+++ b/seantis/dir/facility/css/directory.css
@@ -1,3 +1,7 @@
+#landingPageIntro {
+    margin-top: 7px;   
+}
+
 .directoryResult {
     border: solid #dddddd 1px;
     border-width: 1px 1px 1px 10px;
@@ -60,10 +64,6 @@ div#landingPageText {
     margin-top: -18px;
 }
 
-.resourceItem {
-    padding: 10px;
-}
-
 .resourceTitle {
     margin-left: 10px;
     margin-top: 5px;
@@ -78,10 +78,6 @@ div#landingPageText {
     font-size: 16px;
 }
 
-.resourceItem:hover {
-    background-color: #eee;
-}
-
 .resourceDescription {
     float:left;
     margin-top: 5px;
@@ -93,54 +89,13 @@ div#landingPageText {
 }
 
 .facilityInfo {
-    float: left; 
-    margin-right: 20px;
+    float: left;
+    width: 60%;
+    margin: 0;
 }
 
 .facilityOverview {
     float: right; 
-    width: 350px; 
+    width: 38%;
     margin-top:16px;
-}
-
-@media screen and (max-width: 740px) {
-    .facilityInfo {
-        width: 100% !important;   
-    }   
-    
-    .facilityOverview {
-        float: left; 
-        margin-top: 0;  
-        width: 100% !important;
-    }
-}
-
-@media screen and (min-width: 740px) {
-    .facilityInfo {
-        width: 50% !important;   
-    }
-}
-
-@media screen and (min-width: 1000px) {
-    .facilityInfo {
-        width: 60% !important;   
-    }  
-}
-
-@media screen and (min-width: 1200px) {
-    .facilityInfo {
-        width: 67% !important;   
-    }   
-}
-
-@media screen and (min-width: 1400px) {
-    .facilityInfo {
-        width: 70% !important;   
-    }   
-}
-
-@media screen and (min-width: 1600px) {
-    .facilityInfo {
-        width: 73% !important;   
-    }   
 }
