--- a/seantis/dir/facility/css/izug/item.css
+++ b/seantis/dir/facility/css/izug/item.css
@@ -1,20 +1,72 @@
-/* facility styles for izug.basetheme */
+/*
+
+    izug.basetheme for seantis.dir.facility
+
+*/
 
 .directoryImage {
+    padding: 0;
     margin: 10px 10px 10px 0;
+    float: left;
 }
 
 .resourceItem {
-    border-width: 1px;   
+    border: 1px solid #ddd;
+    min-height: 30px;
+    padding: 5px 0 2px 0;
 }
 
-.resourceItem:hover {
-    box-shadow: none !important;
+.resourceTitle {
+    float:left;
+    font-size: 16px;
 }
 
-.facilityOverview th {
-    font-size: 10px;   
+.resourceDescription {
+    float:left;
+    margin-top: 5px;
+    margin-left: 25px;
 }
+
+.directoryDescription div:first-child {
+    font-size: 1.4em;
+}
+
+.directoryInfo {
+    padding-top: 0;
+    color: #333;
+}
+
+.directoryInfo b {
+    color: #3e5786;
+}
+
+.directoryInfo h2 {
+    font-size: 1.3em;
+    font-weight: normal;
+    margin: 10px 0;
+    border: 1px solid #aaa;
+    border-width: 0 0 1px 0;
+}
+
+.directoryInfo > div {
+    float: left;
+    padding-right: 40px;
+    padding: 15px 15px 15 0;
+}
+
+.directoryInfo > div li {
+    margin-left: -9px;
+}
+
+.directoryInfo > div > h2, .directoryInfo > div > p {
+    max-width: 450px;   
+}
+
+.directoryChildren {
+    margin-top: 20px;
+}
+
+/* facility styles for izug.basetheme */
 
 .directoryDescription {
     width: 70%;
@@ -22,7 +74,7 @@
 }
 
 .facilityInfo {
-    margin-top: 0;
+    margin-top: 10px;;
     width: 500px;   
 }
 
@@ -31,37 +83,11 @@
     margin-top: 0 !important;
 }
 
-.directoryDescription p {
-    font-size: 11px;   
-    margin-top: 0;
-}
-
-.directoryResult {
-    border-color: #dedede;
-    border-width: 1px;
-    padding: 0 20px 0 10px;   
-    position: relative;
-    margin-top: 10px;
-    min-height: 55px;
-}
-
-.directoryInfo h2 {
-    border-color: #bbb;
-    font-size: 12px;
-    font-weight: bold;   
-}
-
 .resourceIcon {
     /* this is probably not the right way of doing it */
     background-image: url('../zugsprite.png');   
     background-position: 0 -326px;
     width: 15px;
-}
-
-#content .directoryItem .resourceItem {
-    padding: 7px 10px 2px 18px;   
-    border-color: #dedede;
-    border-radius: 0;
 }
 
 #content .resourceItem:hover {
@@ -75,32 +101,6 @@
 
 .directoryItem .resourceTitle {
     text-decoration: underline;   
-}
-
-#content .groupSelection {
-    -webkit-box-shadow: 0 0 0 0 white !important;
-    -moz-box-shadow: 0 0 0 0 white !important;
-    box-shadow: 0 0 0 0 white !important;
-    background-color: #efefef !important;
-    
-    border-color: #bbb !important;
-}
-
-#directoryResultMap {
-   float: none;   
-   width: 100%;
-   height: 300px;
-}
-
-#directoryResultMap #default-cgmap {
-    height: 300px;
-}
-
-#content div.directoryMarker {
-    position: absolute;
-    top: 5px;
-    right: -2px;
-    left: auto;     
 }
 
 .resourceDescription {
