--- a/seantis/dir/facility/css/izug/directory.css
+++ b/seantis/dir/facility/css/izug/directory.css
@@ -5,6 +5,10 @@
 */
 
 /* banner */
+#landingPageIntro {
+    margin-bottom: 20px;   
+}
+
 #content #landingPageText #landingPageImage {
     float: left;
     margin-left: -5px;
@@ -42,6 +46,7 @@ div#landingPageText {
     margin: 5px auto 18px auto;
     padding: 10px 5px 15px 12px !important;
     border: 0.0919em solid #dedede !important;
+    width: 490px
 }
 
 .directoryResult a:hover * {
@@ -82,6 +87,12 @@ div#landingPageText {
     margin-top: 5px;
     float:left;
     font-size: 16px;
+}
+
+/* opening hours in resources list */
+.directoryDescription .opening-hours {
+    margin-left: 30px;
+    margin-bottom: 10px;
 }
 
 /* group selection styles */
