Adds the ability to include third party viewlets in the facility item detail

--- a/seantis/dir/facility/css/izug/directory.css
+++ b/seantis/dir/facility/css/izug/directory.css
@@ -38,7 +38,7 @@ div#landingPageText {
 #directoryResultList {
     border-top: none;
     margin-top: 5px;
-    width: auto;   
+    width: 100%;   
 }
 
 /* facility item entry */
