--- a/seantis/dir/facility/css/izug/directory.css
+++ b/seantis/dir/facility/css/izug/directory.css
@@ -88,10 +88,16 @@ div#landingPageText {
     font-size: 16px;
 }
 
-/* opening hours in resources list */
+/* opening hours / description / image in resources list */
+.directoryImage {
+    margin-right: 20px !important;   
+}
 .directoryDescription .opening-hours {
-    margin-left: 30px;
     margin-bottom: 10px;
+}
+
+#directoryResultList .directoryResult p {
+    padding: 0;   
 }
 
 /* group selection styles */
