--- a/seantis/dir/facility/css/izug/directory.css
+++ b/seantis/dir/facility/css/izug/directory.css
@@ -46,6 +46,7 @@ div#landingPageText {
     margin: 5px auto 18px auto;
     padding: 10px 5px 15px 12px !important;
     border: 0.0919em solid #dedede !important;
+    position: relative;
 }
 
 .directoryResult a:hover * {
