Fixes style for seantis.dir.base 1.6

--- a/seantis/dir/facility/css/izug/directory.css
+++ b/seantis/dir/facility/css/izug/directory.css
@@ -9,6 +9,10 @@
     margin-bottom: 20px;   
 }
 
+#landingPageImage {
+    padding-right: 1em;
+}
+
 #content #landingPageText #landingPageImage {
     float: left;
     margin-left: -5px;
