Adds upgrade step for seantis.dir.base 1.7

--- a/seantis/dir/facility/css/izug/directory.css
+++ b/seantis/dir/facility/css/izug/directory.css
@@ -13,6 +13,10 @@
     padding-right: 1em;
 }
 
+#document-action-kml_download {
+    display: none;
+}
+
 #content #landingPageText #landingPageImage {
     float: left;
     margin-left: -5px;
