--- a/seantis/dir/facility/scss/facility.scss
+++ b/seantis/dir/facility/scss/facility.scss
@@ -85,8 +85,8 @@
   }
 
   .directoryMarker {
-      right: 1em;
-      top: 1em;
+    right: 1em;
+    top: 1em;
   }
 
   .directoryImage {
@@ -100,11 +100,11 @@
     width: 70%;
   }
 
-  @media screen and (max-width: $screen-mobile) {
+  @media screen and (max-width: $screen-mobile-landscape) {
     .directoryImage,
     .directoryDescription {
       float: none;
-      width: 100&
+      width: 100%;
     }
   }
 
@@ -157,10 +157,10 @@
 
   .contact {
     @include boxsizing(border-box);
-    float: right;
-    padding: 1em;
-    margin-bottom: 1em;
     background-color: $lightgray;
+    float: right;
+    margin-bottom: 1em;
+    padding: 1em;
     width: 30%;
   }
 
@@ -169,8 +169,8 @@
     .contact,
     .directoryResult .directoryInfo > div {
       float: none !important;
-      width: 100%;
       max-width: 100%;
+      width: 100%;
     }
   }
 
