--- a/seantis/dir/facility/scss/facility.scss
+++ b/seantis/dir/facility/scss/facility.scss
@@ -25,7 +25,6 @@
 
 .portaltype-seantis-dir-facility-item {
   .facilityContent {
-    width: 67%;
     @media screen and (max-width: $screen-tablet-landscape) {
       width: 100%;
     }
@@ -65,7 +64,10 @@
   .directoryChildren .resourceItem {
     border-top: 1px solid $lightgray2;
     padding: 1em .7em;
+  }
 
+  .directoryChildren,
+  #directoryResultList .directoryResult {
     h2 {
       margin-top: 0;
     }
